--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
                     </button>
                 </li>
             </ul>
+            <span>
+                <p>Number of Bars: </p>
+                <input type="range" id="array_size" min="20" max="120" value="70" step="1">
+            </span>
+            <span>
+                <p>Speed: </p>
+                <input type="range" id="speed" min="20" max="300" value="60" step="1">
+            </span>
             <ul class="nav navbar-nav">
                 <li class="nav-item">
                     <button id="bubble" class="btn btn-outline-primary bubble sort">
@@ -54,7 +62,7 @@
     </nav>
 
     <div id="graph">
-        
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
@@ -64,6 +72,11 @@
         integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
         crossorigin="anonymous"></script>
     <script src="js/sorting.js"></script>
+    <script src="js/bubble.js"></script>
+    <script src="js/selection.js"></script>
+    <script src="js/insertion.js"></script>
+    <script src="js/quick.js"></script>
+    <script src="js/merge.js"></script>
 </body>
 
 </html>
